# ChangeLog for dev-perl/OpenCA-OpenSSL
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/OpenCA-OpenSSL/Attic/ChangeLog,v 1.28 2008/01/13 21:41:05 dertobi123 Exp $

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  OpenCA-OpenSSL-0.9.91-r1.ebuild:
  ppc. stable

  17 Dec 2007; Samuli Suominen <drac@gentoo.org>
  OpenCA-OpenSSL-0.9.91-r1.ebuild:
  amd64 stable

  10 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  OpenCA-OpenSSL-0.9.91-r1.ebuild:
  alpha/ia64/sparc/x86 stable

*OpenCA-OpenSSL-0.9.91-r1 (29 Aug 2007)

  29 Aug 2007; Christian Hartmann <ian@gentoo.org>
  -OpenCA-OpenSSL-0.8.43-r1.ebuild, +OpenCA-OpenSSL-0.9.91-r1.ebuild:
  Fixed bug #190655; removed old version

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  OpenCA-OpenSSL-0.8.43-r1.ebuild, OpenCA-OpenSSL-0.9.91.ebuild:
  Ebuild maintenance

  11 Dec 2006; Yuval Yaari <yuval@gentoo.org>
  OpenCA-OpenSSL-0.8.43-r1.ebuild, OpenCA-OpenSSL-0.9.91.ebuild:
  Fixed homepage URLs, bug #157104

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  OpenCA-OpenSSL-0.8.43-r1.ebuild, OpenCA-OpenSSL-0.9.91.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
  OpenCA-OpenSSL-0.9.91.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed header

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org>
  OpenCA-OpenSSL-0.9.91.ebuild:
  Mark 0.9.91 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  OpenCA-OpenSSL-0.9.91.ebuild:
  add ~ia64

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  OpenCA-OpenSSL-0.9.91.ebuild:
  Stable on ppc.

  01 May 2005; Tom Martin <slarti@gentoo.org> OpenCA-OpenSSL-0.9.91.ebuild:
  Stable on amd64.

  30 Apr 2005; Bryan Østergaard <kloeri@gentoo.org>
  OpenCA-OpenSSL-0.9.91.ebuild:
  Stable on alpha.

  28 Apr 2005; Michael Cummings <mcummings@gentoo.org>