@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/OpenCA-OpenSSL/Attic/OpenCA-OpenSSL-0.9.91-r1.ebuild,v 1.4 2008/01/13 21:41:05 dertobi123 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/OpenCA-OpenSSL/Attic/OpenCA-OpenSSL-0.9.91-r1.ebuild,v 1.5 2009/01/01 20:19:52 armin76 Exp $
 
 inherit perl-module
 
@@ -10,7 +10,7 @@ HOMEPAGE="http://search.cpan.org/~madwolf/"
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="alpha amd64 ia64 ppc sparc x86"
+KEYWORDS="alpha amd64 ia64 ppc ~s390 sparc x86"
 IUSE=""
 
 export OPTIMIZE="${CFLAGS}"
