@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/OpenCA-OpenSSL
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/OpenCA-OpenSSL/Attic/ChangeLog,v 1.28 2008/01/13 21:41:05 dertobi123 Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/OpenCA-OpenSSL/Attic/ChangeLog,v 1.29 2009/01/01 20:19:52 armin76 Exp $
+
+  01 Jan 2009; Raúl Porcel <armin76@gentoo.org>
+  OpenCA-OpenSSL-0.9.91-r1.ebuild:
+  Re-add ~s390
 
   13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
   OpenCA-OpenSSL-0.9.91-r1.ebuild:
